--- a/async-race/src/styles/style.scss
+++ b/async-race/src/styles/style.scss
@@ -1,3 +1,7 @@
 @import 'variables.scss';
 @import 'base.scss';
-
+@import 'blocks/button.scss';
+@import 'blocks/pagination.scss';
+@import 'blocks/page-header.scss';
+@import 'blocks/page-container.scss';
+@import 'blocks/garage-section.scss';
