--- a/async-race/src/styles/blocks/garage-section.scss
+++ b/async-race/src/styles/blocks/garage-section.scss
@@ -41,21 +41,21 @@
   .controls__race-btn:not(:disabled) {
     &:hover,
     &:focus {
-      background-color: #7cfc00;
+      background-color: #32cd32;      
     }
   }
 
   .controls__reset-btn:not(:disabled) {
     &:hover,
     &:focus {
-      background-color: #ff4500;
+      background-color: #ff2400;
     }
   }
 
   .controls__generate-btn:not(:disabled) {
     &:hover,
     &:focus {
-      background-color: #ffff00;
+      background-color: #fdee00;
     }
   }
 }
@@ -63,14 +63,14 @@
 .create-form__btn {
   &:hover,
   &:focus {
-    background-color: #ffff00;
+    background-color: #fdee00;
   }
 }
 
 .update-form__btn:not(:disabled) {
   &:hover,
   &:focus {
-    background-color: #ffff00;
+    background-color: #fdee00;
   }
 }
 
@@ -99,7 +99,7 @@
   padding-top: 30px; 
 
   border-radius: 15px;
-  background-color: #00ff7f;
+  background-color: #32cd32;
 
   img {
     width: 300px;
@@ -107,10 +107,10 @@
   }
 
   p {
-    text-align: center;
     font-size: 20px;
     font-weight: bold;  
     color: #000000; 
+    text-align: center;
   }
 }
 
@@ -144,14 +144,14 @@
     .car__select-btn {
       &:hover,
       &:focus {
-        background-color: #ffff00;
+        background-color: #fdee00;
       }
     }
 
     .car__remove-btn {
       &:hover,
       &:focus {
-        background-color: #ff4500;
+        background-color: #ff2400;
       }
     }
   }
@@ -180,11 +180,11 @@
   }
 
   .engine__start-btn:not(:disabled) {
-    background-color: #7cfc00;
+    background-color: #32cd32;
   }
 
   .engine__stop-btn:not(:disabled) {
-    background-color: #ff4500;
+    background-color: #ff2400;
   }  
 }
 
@@ -224,6 +224,39 @@
 
   pointer-events: none;
   user-select: none;  
+}
+
+@media (max-width: 1024px) {
+  .garage__modal {
+    position: fixed;
+    top: calc(60% - 150px);
+    left: calc(50% - 150px);
+  
+    z-index: 10;
+  
+    display: flex;
+    flex-wrap: wrap;  
+    justify-content: center;
+  
+    width: 300px;
+    height: 300px;
+    padding-top: 30px; 
+  
+    border-radius: 15px;
+    background-color: #32cd32;
+  
+    img {
+      width: 280px;
+      height: 180px;
+    }
+  
+    p {
+      font-size: 18px;
+      font-weight: bold;  
+      color: #000000; 
+      text-align: center;
+    }
+  }
 }
 
 .hidden {
