--- a/async-race/src/styles/blocks/page-header.scss
+++ b/async-race/src/styles/blocks/page-header.scss
@@ -74,3 +74,20 @@
   height: 3px;
   background-color: #ffff00;
 }
+
+@media (max-width: 1024px) {
+  .header__logo { 
+    margin-right: 5px;
+  }
+
+  .header__title {
+    font-size: 18px;   
+  }
+
+  .header__link { 
+    margin-right: 20px;
+    padding: 15px;
+  
+    font-size: 16px;  
+  }
+}
