--- a/async-race/src/styles/style.scss
+++ b/async-race/src/styles/style.scss
@@ -5,3 +5,4 @@
 @import 'blocks/page-header.scss';
 @import 'blocks/page-container.scss';
 @import 'blocks/garage-section.scss';
+@import 'blocks/winners-section.scss'
